--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "4.16.4",
     "node-static": "^0.7.11",
     "socket.io": "2.2.0",
+    "socket.io-client": "^2.2.0",
     "utf-8-validate": "5.0.2",
     "ws": "6.2.1"
   },
