--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "ws": "6.2.1"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node server/index.js"
   },
-  "main": "index.js",
+  "main": "server/index.js",
   "devDependencies": {
     "node-sass": "^4.11.0"
   },
